tests/res/visibility/private_field_read.say
type Box {
    secret; // private by default
    init(s) { this.secret = s; }
}
say b = Box(42);
print(b.secret); // error: Member 'secret' is private
